test/type-checking/bad/MissingReturn.cc
int main() {
  bool b = true;

  (b == b);
}
